--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,36 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/chapter-1.xhtml">
+						<b>Introduction</b>
+					</a>
+				</li>
+				<li>
+					<a href="text/chapter-2.xhtml">I</a>
+				</li>
+				<li>
+					<a href="text/chapter-3.xhtml">II</a>
+				</li>
+				<li>
+					<a href="text/chapter-4.xhtml">III</a>
+				</li>
+				<li>
+					<a href="text/chapter-5.xhtml">IV</a>
+				</li>
+				<li>
+					<a href="text/chapter-6.xhtml">V</a>
+				</li>
+				<li>
+					<a href="text/chapter-7.xhtml">VI</a>
+				</li>
+				<li>
+					<a href="text/chapter-8.xhtml">VII</a>
+				</li>
+				<li>
+					<a href="text/chapter-9.xhtml">VIII</a>
+				</li>
+				<li>
+					<a href="text/chapter-10.xhtml">IX</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +63,7 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Ethan Frome</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
