--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -19,31 +19,31 @@
 					</a>
 				</li>
 				<li>
-					<a href="text/chapter-2.xhtml">I</a>
+					<a href="text/chapter-2.xhtml">Chapter I</a>
 				</li>
 				<li>
-					<a href="text/chapter-3.xhtml">II</a>
+					<a href="text/chapter-3.xhtml">Chapter II</a>
 				</li>
 				<li>
-					<a href="text/chapter-4.xhtml">III</a>
+					<a href="text/chapter-4.xhtml">Chapter III</a>
 				</li>
 				<li>
-					<a href="text/chapter-5.xhtml">IV</a>
+					<a href="text/chapter-5.xhtml">Chapter IV</a>
 				</li>
 				<li>
-					<a href="text/chapter-6.xhtml">V</a>
+					<a href="text/chapter-6.xhtml">Chapter V</a>
 				</li>
 				<li>
-					<a href="text/chapter-7.xhtml">VI</a>
+					<a href="text/chapter-7.xhtml">Chapter VI</a>
 				</li>
 				<li>
-					<a href="text/chapter-8.xhtml">VII</a>
+					<a href="text/chapter-8.xhtml">Chapter VII</a>
 				</li>
 				<li>
-					<a href="text/chapter-9.xhtml">VIII</a>
+					<a href="text/chapter-9.xhtml">Chapter VIII</a>
 				</li>
 				<li>
-					<a href="text/chapter-10.xhtml">IX</a>
+					<a href="text/chapter-10.xhtml">Chapter IX</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
